<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">Lost &amp; Found APP</string>

    <!-- Hints for AddItemActivity -->
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="hint_location">Location</string>
    <string name="hint_type">Type (Lost/Found)</string>
    <string name="hint_contact">Contact Information</string>
    <string name="action_save">Save</string>

    <!-- Accessibility -->
    <string name="recycler_description">List of lost and found items</string>
    <string name="add_item">Add new item</string>

    <!-- Main menu -->
    <string name="menu_add_item">Add Item</string>
    <string name="menu_delete_all">Delete All</string>
    <string name="menu_about">About</string>

    <string name="create_advert">CREATE A NEW ADVERT</string>
    <string name="show_items">SHOW ALL LOST &amp; FOUND ITEMS</string>
    <string name="list_title">LOST &amp; FOUND ITEMS</string>
    <string name="remove_item">REMOVE</string>

    <!-- AddItemActivity labels & hints -->
    <string name="label_post_type">Post type:</string>
    <string name="post_lost">Lost</string>
    <string name="post_found">Found</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_date">Date</string>
    <string name="lost_found_items">Lost &amp; Found Items</string>

    <string name="list_all_items">List of all lost and found items</string>

    <string name="google_maps_key">AIzaSyDtONBgXsHE14Q3v25NKw7SHkTDZZbarS8</string>
    <string name="action_current_location">Get Current Location</string>
    <string name="action_get_current_location">Get Current Location</string>


</resources>
